--- a/about.html
+++ b/about.html
@@ -45,7 +45,6 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/faura-alyriana-shakira-021b97250/" class="linkedin"><i
             class="bi bi-linkedin"></i></i></a>
       </div>
@@ -62,12 +61,12 @@
 
         <div class="section-title">
           <h2>About Me</h2>
-          <p>
+          <!-- <p>
             Welcome to the 'About Me' page! My name is Faura Alyriana Shakira, usually called Faura or Rara. I am a
             beginner software engineer who is currently pursuing a bachelor's degree in informatics engineering at
             Sekolah Tinggi Teknologi Bandung and I am currently enrolled also in the Software Engineering bootcamp
             course at Lithan eduCLaaS with the aim of improving my expertise in this field.
-          </p>
+          </p> -->
         </div>
 
         <div class="row">
@@ -78,7 +77,7 @@
             <h3>Front-end Developer &amp; UI/UX Designer</h3>
             <br>
             <div class="row">
-              <div class="col-lg-8">
+              <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-rounded-right"></i> <strong>Birthday:</strong> 4 September 2003</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong> +6287837659605</li>
@@ -93,7 +92,8 @@
               </div>
             </div>
             <p>
-              I have a great interest in UI/UX design and front-end development. In every project, I enjoy the process
+              Welcome to the 'About Me' page! My name is Faura Alyriana Shakira, usually called Faura or Rara. I am a
+            beginner software engineer. I have a great interest in UI/UX design and front-end development. In every project, I enjoy the process
               of creating designs that are aesthetically pleasing and functional, and bring users a pleasant and easy
               experience. I'm excited to see how design can impact the way people interact with technology, and I'm
               constantly striving to become a better expert at delivering innovative and compelling designs.
