--- a/portfolio-details/details1.html
+++ b/portfolio-details/details1.html
@@ -45,7 +45,6 @@
             </nav><!-- .navbar -->
 
             <div class="header-social-links">
-                <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/faura-alyriana-shakira-021b97250/" class="linkedin"><i
                         class="bi bi-linkedin"></i></i></a>
             </div>
@@ -104,7 +103,7 @@
                                 <li><strong>Source Code</strong>: <a
                                         href="https://github.com/fauraalyriana/abc-learning-center.github.io">ABC Learning
                                         Center</a></li>
-                                <!-- <li><strong>Project Demo</strong>: <a href="">View demo</a></li> -->
+                                <li><strong>Project Demo</strong>: <a href="https://fauraalyriana.github.io/abc-learning-center.github.io/">View demo</a></li>
                             </ul>
                         </div>
                         <div class="portfolio-description">
