--- a/portfolio-details/details2.html
+++ b/portfolio-details/details2.html
@@ -45,7 +45,6 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/faura-alyriana-shakira-021b97250/" class="linkedin"><i
             class="bi bi-linkedin"></i></i></a>
       </div>
@@ -75,19 +74,31 @@
                 </div>
 
                 <div class="swiper-slide px-3">
-                  <img src="../assets/img/portfolio-detail/M2D3.png" alt="page 3">
+                  <img src="../assets/img/portfolio-detail/M2D9.png" alt="page 3">
                 </div>
 
                 <div class="swiper-slide px-3">
-                  <img src="../assets/img/portfolio-detail/M2D4.png" alt="page 4">
+                  <img src="../assets/img/portfolio-detail/M2D3.png" alt="page 4">
                 </div>
 
                 <div class="swiper-slide px-3">
-                  <img src="../assets/img/portfolio-detail/M2D5.png" alt="page 5">
+                  <img src="../assets/img/portfolio-detail/M2D10.png" alt="page 5">
                 </div>
 
                 <div class="swiper-slide px-3">
-                  <img src="../assets/img/portfolio-detail/M2D6.png" alt="page 6">
+                  <img src="../assets/img/portfolio-detail/M2D4.png" alt="page 6">
+                </div>
+
+                <div class="swiper-slide px-3">
+                  <img src="../assets/img/portfolio-detail/M2D11.png" alt="page 7">
+                </div>
+
+                <div class="swiper-slide px-3">
+                  <img src="../assets/img/portfolio-detail/M2D5.png" alt="page 8">
+                </div>
+
+                <div class="swiper-slide px-3">
+                  <img src="../assets/img/portfolio-detail/M2D6.png" alt="page 9">
                 </div>
 
               </div>
